feat: update supported transcription models
